<?xml version="1.0"?>
<package format="3">
  <name>livox_interfaces</name>
  <version>2.0.0</version>
  <description>Livox custom message definitions (stub)</description>
  <maintainer email="stub@stub.com">stub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
